image and script paths changed from absolute to relative

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Document</title>
 	<link rel="stylesheet" href="https://bootswatch.com/lumen/bootstrap.min.css">
-	<script src="http://code.jquery.com/jquery-3.1.1.min.js"></script>
-	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<link  href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet">
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script>
+	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<link  href="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
@@ -19,7 +19,7 @@
 					<div class="logo_navig">
 						<div class='logo'>
 							<a href="#">
-								<img src="/image/logo.png" alt="logo">
+								<img src="image/logo.png" alt="logo">
 							</a>
 						</div>
 						<div class="navigation-links">
@@ -37,7 +37,7 @@
 					<div class="callback">
 						<div class="phone-pic">
 							<a href="#">
-								<img src="/image/ImgPhone.png" alt="phone">
+								<img src="image/ImgPhone.png" alt="phone">
 							</a>
 						</div>
 						<div class="phone-number">
@@ -65,7 +65,7 @@
 						<div class="sections-item">
 							<a href="#">
 								<div class="sections-pic">
-									<img src="/image/build.png" alt="">
+									<img src="image/build.png" alt="">
 								</div>
 								<div class="sections-descr">
 									Лизинг недвижимости
@@ -79,7 +79,7 @@
 						<div class="sections-item">
 							<a href="#">
 								<div class="sections-pic">
-									<img src="/image/spanner.png" alt="">
+									<img src="image/spanner.png" alt="">
 								</div>
 								<div class="sections-descr">
 									Лизинг оборудования
@@ -93,7 +93,7 @@
 						<div class="sections-item">
 							<a href="#">
 								<div class="sections-pic">
-									<img src="/image/cars.png" alt="">
+									<img src="image/cars.png" alt="">
 								</div>
 								<div class="sections-descr">
 									Лизинг легковых автомобилей
@@ -108,7 +108,7 @@
 						<div class="sections-item">
 							<a href="#">
 								<div class="sections-pic">
-									<img src="/image/bigcars.png" alt="">
+									<img src="image/bigcars.png" alt="">
 								</div>
 								<div class="sections-descr">
 									Лизинг грузовых автомобилей
@@ -122,7 +122,7 @@
 						<div class="sections-item">
 							<a href="#">
 								<div class="sections-pic">
-									<img src="/image/strelki.png" alt="">
+									<img src="image/strelki.png" alt="">
 								</div>
 								<div class="sections-descr">
 									Возвратный лизинг
@@ -136,7 +136,7 @@
 						<div class="sections-item">
 							<a href="#">
 								<div class="sections-pic">
-									<img src="/image/exk.png" alt="">
+									<img src="image/exk.png" alt="">
 								</div>
 								<div class="sections-descr">
 									Лизинг спецтехники
@@ -157,7 +157,7 @@
 				data-loop="true"
 				data-nav="false">
 					<div class='slider_item_wrapper'>
-						<div class="slider_pic" style="background-image: url('/image/ресторанный.jpg')"></div>
+						<div class="slider_pic" style="background-image: url('image/ресторанный.jpg')"></div>
 						<div class="request-for-leasing">
 							<a href="#">
 								<div class="title">Заявка на лизинг</div>
@@ -166,7 +166,7 @@
 						</div>
 					</div>
 					<div class='slider_item_wrapper'>
-						<div class="slider_pic" style="background-image: url('/image/ресторанный.jpg')"></div>
+						<div class="slider_pic" style="background-image: url('image/ресторанный.jpg')"></div>
 						<div class="request-for-leasing">
 							<a href="#">
 								<div class="title">Заявка на лизинг</div>
@@ -175,7 +175,7 @@
 						</div>
 					</div>
 					<div class='slider_item_wrapper'>
-						<div class="slider_pic" style="background-image: url('/image/ресторанный.jpg')"></div>
+						<div class="slider_pic" style="background-image: url('image/ресторанный.jpg')"></div>
 						<div class="request-for-leasing">
 							<a href="#">
 								<div class="title">Заявка на лизинг</div>
@@ -198,7 +198,7 @@
 							<span class="title">Быстрый ответ на заявку</span>
 							<div class="advantages_popup">
 								В течение 24 часов наш сотрудник свяжется с Вами по телефону для сообщения результатов рассмотрения заявки.
-								<img src="/image/adv_popup_angle.png" alt="">
+								<img src="image/adv_popup_angle.png" alt="">
 							</div>
 						</div>
 					</div>
@@ -209,7 +209,7 @@
 							<span class="title">Профессиональная консультация</span>
 							<div class="advantages_popup">
 								Вы можете лично задать любые вопросы и получить бесплатную консультацию сотрудника компании.
-								<img src="/image/adv_popup_angle.png" alt="">
+								<img src="image/adv_popup_angle.png" alt="">
 							</div>
 						</div>
 					</div>
@@ -220,7 +220,7 @@
 							<span class="title">Выгодные условия</span>
 							<div class="advantages_popup">
 								Оставьте заявку прямо сейчас и мы подберем для Вас оптимальные решения по лизингу!
-								<img src="/image/adv_popup_angle.png" alt="">
+								<img src="image/adv_popup_angle.png" alt="">
 							</div>
 						</div>
 					</div>
@@ -230,7 +230,7 @@
 							<span class="title">Гибкость системы платежей</span>
 							<div class="advantages_popup">
 								Гибкая система оплаты и ценообразования позволяет Вам выбрать удобную стоимость наших услуг.
-								<img src="/image/adv_popup_angle.png" alt="">
+								<img src="image/adv_popup_angle.png" alt="">
 							</div>
 						</div>
 					</div>
@@ -241,7 +241,7 @@
 							<span class="title">Гарантированность сделки</span>
 							<div class="advantages_popup">
 								Услуга проводится профессиональными специалистами с использованием новейших технологий.
-								<img src="/image/adv_popup_angle.png" alt="">
+								<img src="image/adv_popup_angle.png" alt="">
 							</div>
 						</div>
 					</div>
@@ -251,7 +251,7 @@
 							<span class="title">Удобные сроки</span>
 							<div class="advantages_popup">
 								Мы находим оптимальные для Вас сроки выполнения услуги.
-								<img src="/image/adv_popup_angle.png" alt="">
+								<img src="image/adv_popup_angle.png" alt="">
 							</div>
 						</div>
 					</div>
@@ -278,7 +278,7 @@
 							<div class="top">
 								<div class="picture">
 									<a href="#">
-										<img src="/image/circle.png" alt="">
+										<img src="image/circle.png" alt="">
 									</a>
 								</div>
 								<div class="news-title">
@@ -297,7 +297,7 @@
 							<div class="top">
 								<div class="picture">
 									<a href="#">
-										<img src="/image/news1.png" alt="">
+										<img src="image/news1.png" alt="">
 									</a>
 								</div>
 								<div class="news-title">
@@ -348,7 +348,7 @@
 								<div class="col-md-6 col-sm-6 col-xs-6">
 									<div class="novasite-logo">
 										<a href="">
-											<img src="/image/novasite.png" alt="">
+											<img src="image/novasite.png" alt="">
 										</a>
 									</div>
 								</div>
@@ -401,6 +401,6 @@
 	    </div>
 	  </div>
 	</div> -->
-	<script src="/js/common.js"></script>
+	<script src="js/common.js"></script>
 </body>
 </html>
